# face-tracking

./: LICENCE  README.md  __init__.py  faceTrackerDemo.py  liveroi_demo.py  pyproject.toml
.github/workflows/: python-package.yml
config/: settings.py
core/: __init__.py  dlib_detector.py  face_tracker.py  mask_operations.py  motion_analysis.py  smoothing.py
demo/: FaceTrackerCompareData.py  faceTrackerDemo.py  landmark_rois.csv  liveroi_demo.py
face_tracking/: __init__.py
face_tracking/config/: settings.py
face_tracking/core/: __init__.py  face_tracker.py  mask_ops.py  motion_analysis.py  threading.py
face_tracking/processing/: __init__.py  frame_processor.py  landmark_processor.py  smoothing.py
face_tracking/tracking/: __init__.py  dlib_detector.py  mediapipe_detector.py  optical_flow.py
face_tracking/utils/: __init__.py  data_structs.py  general.py  mask_generator.py  mask_operations.py  visualizations.py
processing/: __init__.py  frame_processor.py  landmark_processor.py  smoothing.py
src/: __init__.py
src/config/: __init__.py
src/core/: __init__.py  face_tracker.py  motion_analysis.py
src/processing/: smoothing.py
src/tracking/: dlib_detector.py
src/utils/: __init__.py  data_structs.py  mask_operations.py  visualizations.py
tests/: firsttests.py  test_first.py
tracking/: dlib_detector.py  optical_flow.py
utils/: __init__.py  data_structs.py  general.py  mask_operations.py  visualizations.py
