[project]
name = "face-tracking"
version = "0.1.1"
description = ""
authors = [
    {name = "gpaull",email = "gavin.m.paull@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe (>=0.10.21,<0.11.0)",
    "dlib (>=19.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (==1.26.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
